another small contextual tweak to the readme

--- a/readme.textile
+++ b/readme.textile
@@ -8,7 +8,7 @@ Enabling this extension locks down the CP to Super Admins only. When a non-Super
 
 The message is pulled from the <code>system/utilities/offline.html</code> file and tweaked slightly.
 
-I could make it more customizable but this was for an immediate personal need where I had to do some irregular database tweaking in a production environment. I didn't want any entries being updated while I was modifying things. Let me know if you have any requests or suggestions. Contact "me on twitter":http://twitter.com/erikreagan or via "my website":http://erikreagan.com/contact/.
+I could make it more customizable but this was for an immediate personal need where I had to do some irregular database tweaking in a production environment. I didn't want any entries being updated while I was modifying things and there were way too many member groups with CP access to disable it one-by-one. Let me know if you have any requests or suggestions. Contact "me on twitter":http://twitter.com/erikreagan or via "my website":http://erikreagan.com/contact/.
 
 
 h2. Compatibility
